broswer compat: fixed overlapping psm/dropdown menu in IE6 and IE7.  removed close button in those browsers only.  An imperfect solution, but is fine for now.
git-svn-id: https://svn.socialplanning.org/svn/opencore/trunk@7879 40f73b84-6177-4a8e-8c61-7eee4b1974ed

--- a/opencore/nui/css/opencore.css
+++ b/opencore/nui/css/opencore.css
@@ -839,8 +839,9 @@ a.oc-banana {
   margin: 0 0 1.5em;
   padding: 0.125em 0.25em;
   padding-right: 0.25em;
-  position: relative;
+  position: relative; /* note: this causes psm to overlap topnav menu in IE.  disabled in ie.css */
   vertical-align: middle;
+  z-index: 0;
 }
 .oc-message-error {
   background: pink;
